--- a/ToDoApplication/ToDoApplication.csproj
+++ b/ToDoApplication/ToDoApplication.csproj
@@ -22,6 +22,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TODO list domain model\ToDoDomainModel.csproj" />
+    <ProjectReference Include="..\ToDoDomainModel\ToDoDomainModel.csproj" />
   </ItemGroup>
 </Project>
