--- a/ToDoDomainModel.Tests/ToDoDomainModel.Tests.csproj
+++ b/ToDoDomainModel.Tests/ToDoDomainModel.Tests.csproj
@@ -12,10 +12,10 @@
     <PackageReference Include="NUnit" Version="3.13.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
-  </ItemGroup>  
+  </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TODO list domain model\ToDoDomainModel.csproj" />
+    <ProjectReference Include="..\ToDoDomainModel\ToDoDomainModel.csproj" />
   </ItemGroup>
 
 </Project>
