update: domain model split to domain model and infrastructure, changed data seeding, added getting all lists

--- a/ToDo.DomainModel/ToDo.DomainModel.csproj
+++ b/ToDo.DomainModel/ToDo.DomainModel.csproj
@@ -4,7 +4,8 @@
     <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>ToDo.DomainModel</RootNamespace>
     <EnableNETAnalyzers>True</EnableNETAnalyzers>
-	  <NoWarn>$(NoWarn),1573,1591,1712, SA0001</NoWarn>
+	<Nullable>enable</Nullable>
+	<NoWarn>$(NoWarn),1573,1591,1712, SA0001</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
