--- a/ToDo.WebAPI/ToDo.WebAPI.csproj
+++ b/ToDo.WebAPI/ToDo.WebAPI.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ToDo.DomainModel\ToDo.DomainModel.csproj" />
+    <ProjectReference Include="..\ToDo.Infrastructure\ToDo.Infrastructure.csproj" />
     <ProjectReference Include="..\ToDo.Services\ToDo.Services.csproj" />
   </ItemGroup>
 </Project>
