--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -21,7 +21,8 @@
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.5",
     "serve": "^14.2.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "jwt-decode": "^3.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
