add: refresh tokens added

--- a/ToDo.WebAPI/appsettings.json
+++ b/ToDo.WebAPI/appsettings.json
@@ -8,8 +8,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ToDoConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;Database=tododatabase;Trusted_Connection=True",
+    "ToDoConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;Database=tododatabase;Trusted_Connection=True"
   },
-  "JWT": "js2Um1sZELLbfYMaOf2RBrGZvdSqvrg3iqcrvg7EfOMo03iRzh",
-  "Frontend": "http://localhost:3000"
-}
+  "JWT": {
+    "Secret": "js2Um1sZELLbfYMaOf2RBrGZvdSqvrg3iqcrvg7EfOMo03iRzh",
+    "TokenValidityInMinutes": 2,
+    "RefreshTokenValidityInDays": 1,
+    "ValidIssuer": "http://localhost:5000",
+    "ValidAudience": "http://localhost:3000"
+  },
+   "Frontend": "http://localhost:3000"
+  }
