--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -22,7 +22,8 @@
     "reactstrap": "^9.1.5",
     "serve": "^14.2.0",
     "web-vitals": "^2.1.4",
-    "jwt-decode": "^3.1.2"
+    "jwt-decode": "^3.1.2",
+    "async-mutex": "^0.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
