--- a/Angular/package.json
+++ b/Angular/package.json
@@ -10,6 +10,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "^16.0.0",
+    "@angular-material-components/moment-adapter": "^16.0.0",
     "@angular/animations": "^16.0.0",
     "@angular/cdk": "^16.1.5",
     "@angular/common": "^16.0.0",
