--- a/Angular/package.json
+++ b/Angular/package.json
@@ -26,10 +26,15 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "ng-circle-progress": "^1.7.1",
+    "@ngx-env/builder": "^16.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "@babel/plugin-transform-modules-commonjs": "^7.23.3",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.13.0",
+    "jwt-decode": "^4.0.0",
+    "@types/node": "^20.10.5",
+    "@angular-builders/custom-webpack": "^16.0.0",
+    "dotenv-webpack": "^8.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.4",
