update: notification system added partially, FE not finished, BE finished but not tested

--- a/ToDo.WebAPI/appsettings.json
+++ b/ToDo.WebAPI/appsettings.json
@@ -17,5 +17,28 @@
     "ValidIssuer": "http://localhost:5000",
     "ValidAudience": "http://localhost:4200"
   },
-   "Frontend": "http://localhost:4200"
+  "Frontend": {
+    "Endpoint": "http://localhost:4200"
+  },
+  "Hub": {
+    "Endpoint": "api/notify",
+    "Topic": "item-notification"
+  },
+  "Quartz": {
+    "SchedulerId": "Scheduler-Core",
+    "Triggers": {
+      "CheckNotifications": "check-item-notifications-trigger",
+      "SendNotification": "send-notification-trigger"
+    }
+    "Groups": {
+      "Check": {
+        "Name": "check",
+        "CheckItemNotifications": "check-item-notifications"
+      },
+      "SendNotification": {
+        "Name": "send-notification",
+        "SendItemNotification": "send-item-notification"
+      }
+    }
   }
+}
