--- a/Angular/package.json
+++ b/Angular/package.json
@@ -34,7 +34,8 @@
     "jwt-decode": "^4.0.0",
     "@types/node": "^20.10.5",
     "@angular-builders/custom-webpack": "^16.0.0",
-    "dotenv-webpack": "^8.0.1"
+    "dotenv-webpack": "^8.0.1",
+    "@microsoft/signalr": "^8.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.4",
